# Revenue-Leakage-Agent

./: .env.example  .gitignore  2026-07-20-230009-we-are-working-in-this-mvp-to-undestand-and-detec.txt  ARCHITECTURE.md  CLAUDE.md  candidate_prompts.md  docker-compose.yml  readme.md
__MACOSX/technical-case/: ._readme.md
agent/: Dockerfile  pyproject.toml
agent/app/: __init__.py  agent.py  config.py  main.py  store.py  tools.py
agent/tests/: test_tools.py
frontend/: 2026-07-20-224111-we-are-working-in-this-mvp-to-undestand-and-detec.txt  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/agent/[...path]/: route.ts
frontend/components/: ApprovalCard.tsx  Chat.tsx  ProposalCard.tsx  RecordCard.tsx  ToolPanel.tsx  ToolTrace.tsx
frontend/lib/: api.ts  invoice.ts
