[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "mlflow>=3.14.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
